# bybit

./: .commit_msg  .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CHANGELOG.md  DECISIONS.md  Dockerfile  ENHANCED_TRADING.md  LEGAL_NOTICE.md  ML_INTEGRATION_STATUS.md  ML_INTEGRATION_SUMMARY.md  ML_USAGE_GUIDE.md  Makefile  README.md  RENDER.md  RUNBOOK.md  SECURITY.md  SIGNAL_FLOW_ANALYSIS.md  STRATEGY_AUDIT_REPORT.txt  THREAT_MODEL.md  alembic.ini  docker-compose.dev.yml  docker-compose.mini.yml  docker-compose.yml  pyproject.toml  render.yaml  strategy_lab.json
.github/workflows/: ci.yml  deploy.yml  pr35-diagnostics.yml  render-keepalive.yml  security.yml
config/: feature_flags.yaml  logging.yaml  profiles.yaml  symbols.yaml
docs/: audit_profit_report_ru.md  canary_live_audit_ru.md  prompt_symbol_selection_ai_ru.md
migrations/: env.py
migrations/sql/: 2026_06_11_order_pending_state.sql  2026_06_11_telegram_subscriptions.sql  2026_06_13_model_promotion_log.sql  2026_06_13_one_champion_guard.sql
migrations/versions/: 20260613_0001_initial_schema.py
scripts/: audit_repair_training_data.py  bootstrap.sh  extract_app_shell.py  extract_execution_runtime.py  extract_phase5_modules.py  extract_signal_policy.py  gen_env_example.py  generate_env_example.py  purge_stale_training_data.py  refactor_app_delegates.py
src/trader/: __init__.py  app.py  config.py  operator_priorities.py  telegram_bot.py
src/trader/analytics/: __init__.py  capacity.py  outcome_labeler.py  productivity.py  regime_performance.py
src/trader/api/: __init__.py  fastapi_app.py
src/trader/backtest/: __init__.py  engine.py  metrics.py  run.py
src/trader/data/: __init__.py  candles.py  event_bus.py  flow_tracker.py  orderbook.py  orderbook_tracker.py
tests/: conftest.py
tests/chaos/: test_ws_chaos.py
tests/execution/: test_pending_entries_patch.py
tests/ml/: test_model_registry_scoring.py
tests/training/: test_outcomes.py
tests/unit/: test_adapter_async_close.py  test_advanced_alpha_strategies.py  test_app_multitimeframe.py  test_audit_fixes.py  test_auth.py  test_auto_promoter.py  test_auto_promotion_engine.py  test_auto_train.py  test_backtest_engine.py  test_basic_strategies.py  test_bootstrap_pvalue.py  test_bps_accounting_contract.py  test_bucket_gate.py  test_bybit_adapter.py  test_bybit_rest.py  test_bybit_rest_response_handling.py  test_candle_patterns.py  test_candle_sampler.py  test_candle_seed_and_training_eligibility.py  test_candles.py  test_capacity_calculator.py  test_challenger_fit_batch.py  test_config.py  test_correlated_positions.py  test_data_retention.py  test_db_write_training_fixes.py  test_deploy_info.py  test_directional_labels.py  test_directional_storage_alias.py  test_directional_trade_journal.py  test_directional_trade_journal_lite_diagnostics.py  test_discovered_rule_strategy.py  test_domain_models.py  test_drawdown_preserved.py  test_endpoint_selector.py  test_engine_gates.py  test_enums.py  test_env_example_checker.py  test_event_bus.py  test_execution_engine.py  (+103 more)
trader/: __init__.py
(+129 files in other folders)
