[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bybit-ai-trader"
version = "0.1.0"
description = "Autonomous AI trading bot for Bybit cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "Trader Dev", email = "dev@example.com" }]

dependencies = [
    "pybit>=5.8.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
    "python-telegram-bot>=21.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "optuna>=3.6.0",
    "mlflow>=2.13.0",
    "river>=0.21.0",
    "evidently>=0.4.0",
]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "types-pyyaml>=6.0.0",
    "types-redis>=4.6.0",
]

[project.scripts]
trader = "trader.app:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit
    "N",   # pep8-naming
    "ANN", # flake8-annotations (partial)
]
ignore = [
    "S101",   # allow assert in tests
    "ANN401", # allow Any
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"migrations/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--cov=trader", "--cov-report=term-missing", "--cov-report=xml", "-v"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source_pkgs = ["trader"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]  # allow assert outside tests via ruff
